2008-06-11 Calin A. Culianu <calin@ajvar.org>.

	* base/include/rtai_posix.h: fixed a couple of bugs related to
	  cookie creation and initialisiation in kernel space pthread_create.

2008-06-10 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_posix.h: fixed duplicated macro and add
	  CLOCKREALTIME/MONOTONIC for posix in kernel space; declare
	  handler_wrpr as static to avoid warning of multiple definitions;
	  fixes pointed by: Paul Stein <stein@cepel.br>.
	* base/include/rtai_wrappers.h; define clockid_t and msleep for
	  posix in kernel space.

2008-06-09 Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/*: Some changes to avoid #include <MODEL>.c

2008-05-29 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_lxrt.h: ensure rt_get_priorities has values to be
	  returned pointers on the stack.

2008-05-23 Pierangelo Masarati <masarati@aero.polimi.it>

	* RTAI 3.6.1

2008-05-08 Roland Stigge <stigge@antcom.de>

	* base/sched/liblxrt/touchall.c: avoid using Linux "asm/page.h" in
	  user space by calling glibc "getpagesize" to get arch page size.

2008-05-06 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86_64/hal/hal.immed: grab exceptions as in i386, process
	  floating point enabling immediately.

2008-04-03 Bill Barton <peabody@rahul.net>

	* base/include/rtai_fifos.h and base/ipc/fifos-fisos.c: refurbished
	  fifo handler stuff.

2008-04-01 Bill Barton <peabody@rahul.net>

	* base/sched/sched.c: ensure traps are catched in kernel space also,
	  through PF_EVNOTIFY for hardened kernel threads and set/clear
	  foreign stack for RTAI own kernel tasks. Indeed Bill's fix is not 
	  a first of April Fool.

2008-03-28 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_mq.h and rtai_pmq.h: added a missing RTAI_PROTO
	  in the definition of rt_request_signal_mq.
	  (Pointed at by from Felix Frey" <frey@stettbacher.ch>)

2008-03-14 Paolo Mantegazza <mantegazza@aero.polimi.it>
